--- a/pag_1.css
+++ b/pag_1.css
@@ -1,42 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;1,400;1,500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap');
 
-a {
-    display: inline-block;
-    width: 5%;
-    text-decoration: none;
-    color: inherit;
-  }
-  nav, scroll-container {
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-  }
-  nav {
-    width: 100%;
-    padding: 5px;
-  }
-  scroll-container {
-    display: block;
-    width: 100%;
-    height: 100%;
-    scroll-behavior: smooth;
-  }
-  scroll-page {
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-  }
-
-  
-
-
-
-  *{
+*{
     margin: 0;
-    padding: 0; 
+    padding: 0;
 }
 
+/* Cabeçalho */
 header{
     width: 100%;    
     text-align: center;
@@ -68,8 +38,18 @@ header div a:last-child{
 header div a:last-child:active{
     box-shadow: 0 0px;
 }
+/* ----------------------------------------------- */
 
-a:hover{
+
+/* Link das Outras páginas */
+a {
+    display: inline-block;
+    width: 5%;
+    text-decoration: none;
+    color: inherit;
+  }
+
+  a:hover{
     background-color: #0cb5f88c;
 }
 
@@ -78,8 +58,32 @@ a:active{
     background-color: #0cb5f88c;
     box-shadow: 0 0px;
 }
+/*------------------------*/
 
+/* Configurações das divs do texto*/
+  nav, scroll-container {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+  }
+  nav {
+    width: 100%;
+    padding: 5px;
+  }
+  scroll-container {
+    display: block;
+    width: 100%;
+    height: 100%;
+    scroll-behavior: smooth;
+  }
+  scroll-page {
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+  }
+/*--------------------------------*/
 
+/* Textos Sociais*/
 .problemassociais{
     text-align: center;
     padding-top: 189px;
@@ -90,7 +94,9 @@ a:active{
     margin-left: 300px;
     margin-right: 300px;
 }
+/*---------------------*/
 
+/* Textos Mentais*/
 .problemasmentais{
     text-align: center;
     padding-top: 189px;
@@ -101,17 +107,22 @@ a:active{
     margin-left: 300px;
     margin-right: 300px;
 }
+/*-----------------------*/
 
+/* Textos Horminais */
 .problemahormonal{
     text-align: center;
     padding-top: 189px;
 }
+
 .textohormonal{
     padding-top: 40px;
     margin-left: 300px;
     margin-right: 300px;
 }
+/*-------------------*/
 
+/* Textos Industriais*/
 .problemaindustria{
     text-align: center;
     padding-top: 189px;
@@ -122,7 +133,9 @@ a:active{
     margin-left: 300px;
     margin-right: 300px;
 }
+/*---------------------*/
 
+/*Texto Sobre Nos*/
 .sobrenos{
     text-align: center;
     padding-top: 189px;
@@ -132,11 +145,9 @@ a:active{
     margin-left: 300px;
     margin-right: 300px;
 }
+/*---------------------*/
 
-
-
-
-
-
- 
-  
+/* Configuração para todos os textos*/
+.texto{
+    text-align: justify;
+}
